--- a/web/src/index.css
+++ b/web/src/index.css
@@ -45,9 +45,10 @@ a {
 	width: 100%;
 	height: calc(100% - 64px);
 	background-color: #f5f5f5;
+	visibility: hidden;
 	overflow: hidden;
 }
 
 .view.is-visible {
-	z-index: 999;
+	visibility: visible;
 }
